# axum-examples

./: Cargo.toml  README.md
chat/: Cargo.toml  chat.html
chat/src/: main.rs
extract/: Cargo.toml
extract/src/: main.rs
response/: Cargo.toml
response/src/: main.rs
rust_long_polling/: Cargo.toml
rust_long_polling/src/: main.rs
sse/: Cargo.toml
sse/src/: main.rs
test/: Cargo.toml
test/src/: handle.rs  init_sql  lib.rs  main.rs  route.rs
upload/: Cargo.toml
upload/src/: main.rs
