[package]
name = "example-sse"
version = "0.1.0"
edition = "2021"


[dependencies]

axum = { version = "0.4.3", features = ["headers"] }
futures = { workspace = true }
headers = "0.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
