[package]
name = "example-polling"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
warp = "*"
