[package]
name = "upload"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.4.3", features = ["multipart", "headers"] }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
headers = { workspace = true }
tower-http = { workspace = true }
